# adaad

./: .adaad_agent_state.json  .env.example  .env.github_app  .gitignore  .pre-commit-config.yaml  ADAAD_30_INNOVATIONS.md  ADAAD_DEEP_DIVE_AUDIT.md  ADAAD_DeepDive_v3.2.0.docx  ADAAD_Deep_Critique.docx  ADAAD_Deep_Dive.docx  ADAAD_Executive_Briefing_v7.4.0.docx  ADAAD_Founder_Plan_Proposal (1).html  ADAAD_Thesis.html  ADAAD_v8_Unified_Roadmap (2).docx  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  DISTRIBUTION.md  Dockerfile.demo  EPIC_4_ADAAD10_Production_Runtime.md  GEMINI.md  INSTALL_ANDROID.md  InnovativeAI-adaad_ADAAD_24bdad.json  MIGRATION.md  MILESTONE_ROADMAP_ADAAD6-9.md  PHONE_SETUP.md  QUICKSTART.md  README.md  ROADMAP.md  TERMUX_SETUP.md  TRUST_CENTER.md  adaadell_run.sh  code-scanning-files-extracted.csv  docker-compose.yml  dork  fix_import_boundaries.py  governance_runtime_profile.lock.json  integrity_hardening.patch  (+10 more)
.codex/: README.md  env_declarations.reference  maintenance.sh  preflight_stub.py  setup.sh
.github/: pull_request_template.md
.ledger_snapshots/: snapshots.json
_inbox/: README.md
adaad/: __init__.py  __main__.py
android/: build.gradle
app/: README.md  architect_agent.py  beast_mode_loop.py  dream_mode.py  github_app.py  main.py  mutation_executor.py  root.py  simulation_utils.py
artifacts/: pr3h_acceptance_audit.json
config/: mobile_perf_budgets.json  server_endpoint_perf_budgets.v1.json
context/: context.json  context.schema.json
data/: capabilities.json  ceb_amendment_ledger.jsonl  checkpoint_chain.jsonl  cst_gap_discovery_feed.jsonl  explore_exploit_state.json  github_app_events.jsonl  governance_ledger_phase96.jsonl  mutation_engine_state.json  oracle_answers.jsonl  persona_epoch_records.jsonl  personality_profiles.json  storage_usage_index.json  weight_adaptor_state_penalty.json
docs/: ADAADCHAT_SETUP.md  ADAAD_FOUNDER_PLAN_PROPOSAL.md  ADAAD_HORIZON_FORECAST_2026.md  ADAAD_Horizon_v2.html  ADAAD_PLAIN_ENGLISH_OVERVIEW.md  ADAAD_STRATEGIC_BUILD_SUGGESTIONS.md  ARCHITECTURE_CONTRACT.md  ARCHITECTURE_SUMMARY.md  AUDIT_REPAIR_ALIGNMENT_2026-02.md  CONSTITUTION.md  DETERMINISM.md  DOCS_VISUAL_STYLE_GUIDE.md  ENVIRONMENT_VARIABLES.md  GOVERNANCE_ENFORCEMENT.md  INNOVATIONS_IMPLEMENTATION.md  INNOVATIONS_ORCHESTRATION.md  INNOVATIONS_UI.md  INNOVATIONS_WIRING.md  IP_PATENT_COUNSEL_BRIEF.md  IP_PATENT_FILING_ARTIFACT.md  PHASE_11_UPGRADE_PLAN.md  PHASE_14_UPGRADE_PLAN.md  PHASE_15_UPGRADE_PLAN.md  PHASE_16_UPGRADE_PLAN.md  PHASE_17_UPGRADE_PLAN.md  PHASE_18_UPGRADE_PLAN.md  PHASE_19_UPGRADE_PLAN.md  PHASE_20_UPGRADE_PLAN.md  PHASE_21_UPGRADE_PLAN.md  PHASE_22_UPGRADE_PLAN.md  PHASE_23_UPGRADE_PLAN.md  PHASE_24_UPGRADE_PLAN.md  PHASE_25_UPGRADE_PLAN.md  PHASE_66_PLAN.md  README.md  README_IMPLEMENTATION_ALIGNMENT.md  SECURITY.md  VERIFIABLE_CLAIMS.md  evidence_normalization.md  first-loop-30min.md  (+5 more)
governance/: CANONICAL_ENGINE_DECLARATION.md  DEPRECATION_REGISTRY.md  constitutional_rule_count.json  mutation_ledger.py  promotion_gate.py  report_version.json  rule_applicability.yaml  simplification_targets.json
public/: index.html
runtime/: README.md  __init__.py  audit_auth.py  capability_graph.py  constants.py  constitution.py  fitness_pipeline.py  innovations.py  innovations_bus.py  innovations_router.py  innovations_wiring.py  invariants.py  metrics.py  oracle_ledger.py  personality_profiles.py  preflight.py  seed_cel_injector.py  seed_cel_outcome.py  seed_competition.py  seed_evolution.py  seed_promotion.py  seed_proposal_bridge.py  seed_review.py  system_status.py  tenancy.py  test_sandbox.py
schemas/: evidence_bundle.v1.json  governance_health_snapshot.v1.json  merge_attestation.v1.json  normalized_evidence_item.v1.json  pr_lifecycle_event.v1.json  replay_manifest.v1.json  routing_health_report.v1.json  soulbound_context_event.v1.json  telemetry_decision_record.v1.json
scripts/: adaad  agent_bootstrap.sh  (+55 more)
(+1340 files in other folders)
