[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaad"
# PYPROJECT-VER-01: Aligned to VERSION file (9.24.0).  pyproject.toml was
# frozen at 9.15.0 — a 9 minor-version drift from the canonical VERSION file
# and CHANGELOG head.  pip/PyPI/GitHub Packages now serve correct metadata.
version = "9.34.0"
description = "ADAAD — Autonomous Development & Adaptation Architecture: governance-first constitutional AI evolution runtime"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
  { name = "InnovativeAI LLC", email = "dev@innovativeai.io" },
]
keywords = [
  "autonomous-ai", "constitutional-ai", "governance", "self-evolution",
  "lineage-ledger", "multi-agent", "fastapi", "ai-safety",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.135.1",
  "uvicorn>=0.41.0",
  "anthropic>=0.84.0",
  "libcst>=1.1.0,<2.0",
  "PyYAML>=6.0.3",
  "PyNaCl>=1.6.2",
]

[project.urls]
Homepage = "https://github.com/InnovativeAI-adaad/ADAAD"
Repository = "https://github.com/InnovativeAI-adaad/ADAAD.git"
Changelog = "https://github.com/InnovativeAI-adaad/ADAAD/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/InnovativeAI-adaad/ADAAD/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27.0",
  "cryptography>=44.0.3",
  "pytest-benchmark>=5.1.0",
  "qrcode>=8.2",
]
server = [
  "fastapi>=0.135.1",
  "uvicorn[standard]>=0.41.0",
]

[tool.setuptools.packages.find]
include = ["adaad*", "runtime*", "app*", "security*", "tools*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
markers = [
  "qa7: lint scope expansion rollout tests gated behind QA7_LINT_ROLLOUT.",
  "pr3h_acceptance: PR-3H acceptance suite.",
  "pr3h_checkpoint_tamper: PR-3H checkpoint tamper escalation coverage.",
  "pr3h_entropy_triage: PR-3H entropy triage replay fixture coverage.",
  "governance_gate: Governance-lane endpoint contract coverage.",
  "regression_standard: Standard-lane regression endpoint contract coverage.",
  "benchmark: Optional performance benchmarks; excluded from required CI gates.",
]
